tests/errors/surf_arity_13.ki
# class instantiation with an unexpected keyword argument
class P:
    var _init_ = Function(self, x):
        self.x = x
discard P(z = 1)
